@@ -1,3 +1,7 @@
+1999-10-13  Tim Jenness  <timj@jach.hawaii.edu>
+
+	* Convert.pm (hds2ndf): Add routine for HDS to NDF conversion.
+
 1999-09-22  Tim Jenness  <timj@jach.hawaii.edu>
 
 	* Frame/JCMT.pm (findrecipe): Support phot-pixel jiggle maps
